--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,12 @@
   "author": "Gastón Valentini",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/cors": "^2.8.16",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
