--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "migration-run": "typeorm-ts-node-commonjs migration:run -d ./src/database/database",
+    "migration-revert": "typeorm-ts-node-commonjs migration:revert -d ./src/database/database"
   },
   "author": "Gastón Valentini",
   "license": "ISC",
