--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "license": "ISC",
     "dependencies": {
         "@types/cors": "^2.8.16",
+        "@types/jsonwebtoken": "^9.0.5",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.6.3",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.17"
